feat(transform_items): check than both ion and json are ok with the task